--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -1,60 +1,20 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.container {
+.container{
     display: flex;
+    justify-content: center;
+    height: 100vh;  
+}
+.container img{
+    width: 30vh;
+}
+.cards{
+    display: flex;
+    align-items: center; 
+    margin: 2%; 
     flex-direction: column;
-    align-items: center;
-    margin-top: 6%;
+    
 }
 
-h2 {
-    font-size: 3vh;
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 4%;
+.cards p{
+    padding-top: 2px;
     font-family: 'Poppins';
-}
-
-.cards-container {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    width: 80%;
-    flex-wrap: wrap;
-}
-
-.cards {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 2px 2px 10px 4px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    width: 34vh;
-    padding: 20px;
-    text-align: center;
-}
-
-.cards img {
-    width: 100%;
-    border-radius: 8px;
-}
-
-.cards p {
-    margin-top: 10px;
-    color: #333;
-    font-size: 16px;
-    font-family: 'Poppins';
-}
-
-.price {
-    font-weight: bold;
-    color: #5a5a5a;
-    margin-top: 10px;
-}
-.cards:hover {
-    transform: translateY(-10px); 
-    box-shadow: 2px 10px 20px rgba(0, 0, 0, 0.2); /* Aumentando a sombra no hover */
 }
